--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,4 @@
 @import "tailwindcss";
-@tailwind utilities;
 
 :root, :host {
   --luxury-white: #F2F3F4;
@@ -15,129 +14,81 @@
 body{
   font-family: "Poppins", sans-serif
 }
+/*----------------Topbar----------------*/
 .topbar{
-  @apply flex justify-center bg-[var(--fish-red)] text-white font-light tracking-wider text-sm;
+  background-color: var(--fish-red);
   height: 40px;
   width: 100%;
 }
-/*----------------inTopbar----------------*/
-.location-area{
-  @apply flex items-center;
-}
-.information-area{
-  @apply flex items-center;
-}
-.social-area{
-  @apply  text-2xl flex items-center gap-5;
-}
-/*----------------inTopbar----------------*/
-
+/*----------------endTopbar----------------*/
+/*----------------Header----------------*/
 header{
-  @apply flex justify-center bg-white p-2;
   height: 136px;
   width: 100%;
 }
-/*----------------inHeader----------------*/
-.logo{
-  width: fit-content;
-  height: 100%;
-}
-.logo img{
-  width: fit-content;
-  height: 100%;
-}
 .header-search-input{
-  @apply rounded-3xl border border-[var(--line-color)] focus:outline-none ;
   width: 500px;
   height: 40px;
   padding: 10px 40px 10px 15px;
 }
-.header-search-icon{
-  @apply absolute top-1/2 right-3 -translate-y-1/2 text-[var(--line-color)] text-2xl cursor-pointer;
-}
-.search-btn{
-  @apply relative;
-}
-.user-area{
-  @apply flex items-center gap-6;
-}
 .user-account a, .user-favorites a, .user-cart a{
-  @apply flex flex-col items-center font-medium;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 500;
 }
-/*----------------inHeader----------------*/
-
+/*----------------endHeader----------------*/
+/*----------------Nav----------------*/
 nav{
-  @apply flex justify-center bg-[var(--fish-blue)] text-[var(--luxury-white)] sticky top-0 z-50;
+  background-color: var(--fish-blue);
+  color: var(--luxury-white);
   height: 55px;
   width: 100%;
 }
-
-/*----------------inNav----------------*/
-.features-nav{
-  @apply flex items-center gap-3;
-}
-.features-nav ul{
-  @apply flex items-center gap-8  font-medium text-lg;
-}
-.user-nav{
-  @apply flex items-center;
-}
-.user-nav ul{
-  @apply flex items-center gap-8 font-medium text-lg;
-}
-/*----------------inNav----------------*/
-
+/*----------------endNav----------------*/
+/*----------------Hero----------------*/
 section.hero{
-  @apply flex justify-center bg-[var(--fish-sky-blue)];
+  background-color: var(--fish-sky-blue);
   background-image: url("assets/herobg.png");
   background-repeat: no-repeat;
   background-position: bottom;
   background-size:cover;
   height: 750px;
 }
-
-/*----------------inHero----------------*/
 .hero-title{
-  @apply w-5/12 flex flex-col gap-4;
   font-family: 'montserrat', sans-serif;
 }
-.fish-button{
-  @apply size-fit mt-5;
-}
-.fish-image{
-  @apply w-35 relative inline-block;
-}
-.fish-image span{
-  @apply absolute inset-0 flex items-center justify-end text-lg font-extrabold text-white pr-5 pt-1;
-}
 .hero-social{
-  @apply absolute flex flex-col gap-4 text-3xl text-[var(--luxury-black)];
+  color: var(--luxury-black);
   top: 75%;
   left: 2%;
   transform: translateY(-50%);
 }
-.hero-product{
-  @apply flex flex-col items-end justify-end h-full relative;
-}
-.price-area{
-  @apply h-fit w-60 relative top-30 right-10 flex items-center justify-center;
-}
-/*----------------inHero----------------*/
-
+/*----------------endHero----------------*/
+/*----------------Features----------------*/
 .features{
-  @apply flex justify-center;
   font-family: 'Poppins', sans-serif;
 }
-
-/*----------------inFeatures----------------*/
 .feature-box{
-  @apply w-1/6 p-5 aspect-square flex flex-col items-center gap-5;
+  width: 16.6667%;
+  padding: 20px;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 .feature-box span{
-  @apply text-xl font-medium;
+  font-size: 20px;
+  font-weight: 500;
 }
 .feature-cycle{
-  @apply rounded-full flex items-center justify-center border-10 bg-white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-width: 10px;
+  border-radius: calc(infinity * 1px);
+  background-color: white;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -147,34 +98,29 @@ section.hero{
   height: 100%;
   object-fit: cover;
 }
-/*----------------inFeatures----------------*/
-
-.products{
-  @apply flex justify-center;
-}
-
-/*----------------inProducts----------------*/
-
-
-.products-navbar ul{
-  @apply flex items-center gap-8 font-medium text-2xl;
-}
+/*----------------endFeatures----------------*/
+/*----------------Products----------------*/
 .products-navbar ul li{
-  @apply cursor-pointer hover:text-[var(--fish-red)] transition duration-300;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.products-navbar ul li:hover{
+  color: var(--fish-red);
 }
 .products-navbar ul li.active a {
   color: var(--fish-red) !important;
 }
-.products-area{
-  @apply flex flex-wrap w-full;
-}
 .products-box{
   position: relative;
-  @apply w-1/4 p-5;
+  width: 25% ;
+  padding: 20px;
 }
 .products-card{
-  
-  @apply size-full transition duration-300 z-10 bg-white;
+  height: 100%;
+  width: 100%;
+  transition: all 0.3s;
+  background-color: white;
+  z-index: 10;
 }
 .products-box::before {
   content: "";
@@ -185,7 +131,7 @@ section.hero{
   width: 80%;
   height: 80%;
   border-radius: 50%;
-  box-shadow: 0 20px 40px 1px rgba(0, 0, 0, 0.72);
+  box-shadow: 0 15px 40px 1px rgba(0, 0, 0, 0.52);
   z-index: -10;
 }
 .products-card > * {
@@ -193,6 +139,8 @@ section.hero{
   z-index: 1;
 }
 .products-card .title-area{
-  @apply p-7 flex flex-col;
+  display: flex;
+  flex-direction: column;
+  padding: 28px;
 }
-/*----------------inProducts----------------*/
+/*----------------endProducts----------------*/
