--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,7 @@
   --fish-pink: #FF8880;
   --fish-yellow: #EED466;
   --fish-brown: #D4C29B;
+  --fish-green: #2CB673;
   --line-color: #d2d2d2;
 }
 body{
@@ -102,7 +103,9 @@ section.hero{
 /*----------------Products----------------*/
 .products-navbar ul li{
   cursor: pointer;
-  transition: all 0.3s;
+}
+.products-navbar ul li a {
+  transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .products-navbar ul li:hover{
   color: var(--fish-red);
@@ -142,5 +145,58 @@ section.hero{
   display: flex;
   flex-direction: column;
   padding: 28px;
+}
+.image-area span{
+  position: absolute;
+  top: 25px;
+  color: var(--luxury-white);
+  font-size: 11px;
+  padding-inline: 10px;
+  padding-block: 4px;
+  z-index: 10;
+}
+.image-area .guluten-free{
+  background-color: var(--fish-green);
+}
+.image-area .guluten-free::before{
+  content: "Gulütensiz";
+}
+.image-area .nothing{
+  display: none;
+}
+.image-area .offsale{
+  background-color: var(--fish-red);
+}
+.image-area .offsale::before{
+  content: "İndirimli";
+}
+.image-area .fast-buttons{
+  position: absolute;
+  display: flex;
+  gap: 10px;
+  opacity: 0;
+  left: 50%;
+  bottom: 20px;
+  translate: -50%;
+  transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.products-box:hover .fast-buttons{
+  opacity: 1;
+  pointer-events: auto;
+  z-index: 20;
+}
+.image-area .fast-buttons button{
+  background-color: white;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all;
+  pointer-events: auto;
+  @apply  hover:bg-[var(--fish-blue)] hover:text-white transition pointer-events-auto;
+}
+.image-area .fast-buttons button:hover{
+  background-color: var(--fish-blue);
+  color: white;
 }
 /*----------------endProducts----------------*/
