--- a/src/output.css
+++ b/src/output.css
@@ -28,11 +28,12 @@
     --font-weight-extralight: 200;
     --font-weight-light: 300;
     --font-weight-medium: 500;
-    --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
     --tracking-wider: 0.05em;
     --radius-3xl: 1.5rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -245,12 +246,6 @@
   }
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
-  }
-  .my-3 {
-    margin-block: calc(var(--spacing) * 3);
-  }
-  .my-4 {
-    margin-block: calc(var(--spacing) * 4);
   }
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
@@ -477,10 +472,6 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
-  .font-semibold {
-    --tw-font-weight: var(--font-weight-semibold);
-    font-weight: var(--font-weight-semibold);
-  }
   .tracking-wider {
     --tw-tracking: var(--tracking-wider);
     letter-spacing: var(--tracking-wider);
@@ -514,6 +505,7 @@
   --fish-pink: #FF8880;
   --fish-yellow: #EED466;
   --fish-brown: #D4C29B;
+  --fish-green: #2CB673;
   --line-color: #d2d2d2;
 }
 body {
@@ -596,7 +588,9 @@ section.hero {
 }
 .products-navbar ul li {
   cursor: pointer;
-  transition: all 0.3s;
+}
+.products-navbar ul li a {
+  transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .products-navbar ul li:hover {
   color: var(--fish-red);
@@ -636,6 +630,72 @@ section.hero {
   display: flex;
   flex-direction: column;
   padding: 28px;
+}
+.image-area span {
+  position: absolute;
+  top: 25px;
+  color: var(--luxury-white);
+  font-size: 11px;
+  padding-inline: 10px;
+  padding-block: 4px;
+  z-index: 10;
+}
+.image-area .guluten-free {
+  background-color: var(--fish-green);
+}
+.image-area .guluten-free::before {
+  content: "Gulütensiz";
+}
+.image-area .nothing {
+  display: none;
+}
+.image-area .offsale {
+  background-color: var(--fish-red);
+}
+.image-area .offsale::before {
+  content: "İndirimli";
+}
+.image-area .fast-buttons {
+  position: absolute;
+  display: flex;
+  gap: 10px;
+  opacity: 0;
+  left: 50%;
+  bottom: 20px;
+  translate: -50%;
+  transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.products-box:hover .fast-buttons {
+  opacity: 1;
+  pointer-events: auto;
+  z-index: 20;
+}
+.image-area .fast-buttons button {
+  background-color: white;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all;
+  pointer-events: auto;
+  pointer-events: auto;
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--fish-blue);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      color: var(--color-white);
+    }
+  }
+}
+.image-area .fast-buttons button:hover {
+  background-color: var(--fish-blue);
+  color: white;
 }
 @property --tw-translate-x {
   syntax: "*";
