--- a/src/input.css
+++ b/src/input.css
@@ -124,18 +124,7 @@ section.hero{
   transition: all 0.3s;
   background-color: white;
   z-index: 10;
-}
-.products-box::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 80%;
-  height: 80%;
-  border-radius: 50%;
-  box-shadow: 0 15px 40px 1px rgba(0, 0, 0, 0.52);
-  z-index: -10;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px, rgba(0, 0, 0, 0.1) 0px 8px 74px;
 }
 .products-card > * {
   position: relative;
@@ -188,14 +177,23 @@ section.hero{
 .image-area .fast-buttons button{
   background-color: white;
   padding: 5px;
+  width: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all;
   pointer-events: auto;
-}
-.image-area .fast-buttons button:hover{
-  background-color: var(--fish-blue);
-  color: white;
+  cursor: pointer;
+  aspect-ratio: 1 / 1;
 }
 /*----------------endProducts----------------*/
+/*----------------Whyus----------------*/
+.whyus-container{
+  background-image: url("assets/whyusbg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 738px;
+}
+/*----------------endWhyus----------------*/
