--- a/src/input.css
+++ b/src/input.css
@@ -191,9 +191,54 @@ section.hero{
 .whyus-container{
   background-image: url("assets/whyusbg.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
   background-size: cover;
   width: 100%;
   height: 738px;
+}
+.whyus-titlr{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+article{
+  width: 33.3333%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+article .article-content{
+  display: flex;
+  align-items: start;
+  gap:20px;
+  text-align: end;
+}
+article .article-content .content-title{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+article .article-content .content-title h3{
+  font-size: 24px;
+}
+article .article-content .content-title p{
+  font-size: 22px;
+  font-weight: 200;
+}
+article .article-content .content-img{
+  background-color: white;
+  padding: 16px;
+  height: 80px;
+  border-radius: calc(infinity * 1px);
+  aspect-ratio: 1 / 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 /*----------------endWhyus----------------*/
