--- a/src/output.css
+++ b/src/output.css
@@ -276,10 +276,6 @@
   .inline-block {
     display: inline-block;
   }
-  .size-10 {
-    width: calc(var(--spacing) * 10);
-    height: calc(var(--spacing) * 10);
-  }
   .size-13 {
     width: calc(var(--spacing) * 13);
     height: calc(var(--spacing) * 13);
@@ -291,9 +287,6 @@
   .size-full {
     width: 100%;
     height: 100%;
-  }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
   }
   .h-150 {
     height: calc(var(--spacing) * 150);
@@ -313,11 +306,8 @@
   .w-5\/12 {
     width: calc(5/12 * 100%);
   }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
-  }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
+  .w-12 {
+    width: calc(var(--spacing) * 12);
   }
   .w-35 {
     width: calc(var(--spacing) * 35);
@@ -389,20 +379,11 @@
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
-  }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
-  }
   .overflow-hidden {
     overflow: hidden;
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
-  }
-  .rounded-full {
-    border-radius: calc(infinity * 1px);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -437,26 +418,8 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
-  .p-5 {
-    padding: calc(var(--spacing) * 5);
-  }
-  .p-8 {
-    padding: calc(var(--spacing) * 8);
-  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
-  }
-  .py-20 {
-    padding-block: calc(var(--spacing) * 20);
-  }
-  .py-30 {
-    padding-block: calc(var(--spacing) * 30);
   }
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
@@ -467,11 +430,11 @@
   .pr-5 {
     padding-right: calc(var(--spacing) * 5);
   }
+  .\!text-start {
+    text-align: start !important;
+  }
   .text-center {
     text-align: center;
-  }
-  .text-end {
-    text-align: end;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -743,10 +706,55 @@ section.hero {
 .whyus-container {
   background-image: url("assets/whyusbg.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
   background-size: cover;
   width: 100%;
   height: 738px;
+}
+.whyus-titlr {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+article {
+  width: 33.3333%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+article .article-content {
+  display: flex;
+  align-items: start;
+  gap: 20px;
+  text-align: end;
+}
+article .article-content .content-title {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+article .article-content .content-title h3 {
+  font-size: 24px;
+}
+article .article-content .content-title p {
+  font-size: 22px;
+  font-weight: 200;
+}
+article .article-content .content-img {
+  background-color: white;
+  padding: 16px;
+  height: 80px;
+  border-radius: calc(infinity * 1px);
+  aspect-ratio: 1 / 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 @property --tw-translate-x {
   syntax: "*";
