--- a/src/output.css
+++ b/src/output.css
@@ -262,6 +262,9 @@
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
   }
+  .my-10 {
+    margin-block: calc(var(--spacing) * 10);
+  }
   .-mt-5 {
     margin-top: calc(var(--spacing) * -5);
   }
@@ -301,6 +304,12 @@
     width: 100%;
     height: 100%;
   }
+  .h-1\.5 {
+    height: calc(var(--spacing) * 1.5);
+  }
+  .h-15 {
+    height: calc(var(--spacing) * 15);
+  }
   .h-150 {
     height: calc(var(--spacing) * 150);
   }
@@ -318,6 +327,12 @@
   }
   .w-1\/3 {
     width: calc(1/3 * 100%);
+  }
+  .w-2\/5 {
+    width: calc(2/5 * 100%);
+  }
+  .w-3\/5 {
+    width: calc(3/5 * 100%);
   }
   .w-5\/12 {
     width: calc(5/12 * 100%);
@@ -343,6 +358,13 @@
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-scale-x-100 {
+    --tw-scale-x: calc(100% * -1);
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  .rotate-10 {
+    rotate: 10deg;
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
@@ -464,8 +486,17 @@
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
+  }
+  .pt-20 {
+    padding-top: calc(var(--spacing) * 20);
+  }
   .pr-5 {
     padding-right: calc(var(--spacing) * 5);
+  }
+  .pr-20 {
+    padding-right: calc(var(--spacing) * 20);
   }
   .\!text-start {
     text-align: start !important;
@@ -593,6 +624,12 @@
   --fish-green: #2CB673;
   --line-color: #d2d2d2;
 }
+@font-face {
+  font-family: 'Biro';
+  src: url('assets/biro-script-plus.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -714,12 +751,20 @@ section.hero {
   padding-block: 4px;
   z-index: 10;
 }
+.image-area {
+  overflow: hidden;
+}
 .image-area img {
-  overflow-y: auto;
   width: 100%;
   height: 230px;
-  background-position: center;
   object-fit: cover;
+  background-position: center;
+  display: block;
+  transition: transform 320ms cubic-bezier(0.4,0,0.2,1);
+  transform-origin: center center;
+}
+.products-card:hover .image-area img {
+  transform: scale(1.06);
 }
 .image-area .guluten-free {
   background-color: var(--fish-green);
@@ -749,7 +794,7 @@ section.hero {
   translate: -50%;
   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
-.products-box:hover .fast-buttons {
+.products-card:hover .fast-buttons {
   opacity: 1;
   pointer-events: auto;
   z-index: 20;
@@ -824,6 +869,81 @@ article .article-content .content-img {
   width: 100%;
   height: 650px;
 }
+.special-title .biro {
+  font-family: 'Biro';
+}
+.recipe-box {
+  height: 50%;
+  width: 50%;
+  padding: 20px;
+}
+.recipe-box .recipe-card {
+  height: 100%;
+  width: 100%;
+  border-radius: 16px;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  align-items: end;
+}
+.recipe-box .recipe-card .card-title {
+  padding: 0 0 20px 32px;
+}
+.recipe-box .recipe-card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0,0,0,0.25);
+  z-index: 0;
+  pointer-events: none;
+  border-radius: 16px;
+}
+.recipe-box .recipe-card > * {
+  z-index: 2;
+}
+.recipe-box .recipe-card::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0,0,0,0.25) 100%);
+  z-index: 1;
+  pointer-events: none;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  border-radius: 16px;
+}
+.recipe-box .recipe-card .recipe-bg-img {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 16px;
+  z-index: 0;
+}
+.ribbon {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+}
+.ribbon {
+  --f: .5em;
+  position: absolute;
+  top: 0;
+  right: 0;
+  line-height: 1.8;
+  padding-inline: 1lh;
+  padding-bottom: var(--f);
+  border-image: conic-gradient(#0008 0 0) 51%/var(--f);
+  clip-path: polygon( 100% calc(100% - var(--f)),100% 100%,calc(100% - var(--f)) calc(100% - var(--f)),var(--f) calc(100% - var(--f)), 0 100%,0 calc(100% - var(--f)),999px calc(100% - var(--f) - 999px),calc(100% - 999px) calc(100% - var(--f) - 999px));
+  transform: translate(calc((1 - cos(45deg))*100%), -100%) rotate(45deg);
+  transform-origin: 0% 100%;
+  background-color: var(--fish-red);
+}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
@@ -838,6 +958,21 @@ article .article-content .content-img {
   syntax: "*";
   inherits: false;
   initial-value: 0;
+}
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -970,6 +1105,9 @@ article .article-content .content-img {
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
